# job_spot_backend

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: prod.yml
.sqlx/: query-0d396d686d3f75d71a18d7301e110d4288f9628692be5e481d87f1cde4076aab.json  query-15c6e98be376f235183d7dfc03474333a827c6b6c6388180d37b0d65c9e14e53.json  query-18b7a493cc0fec60d97250cbd1a77ad0ae935a7ec97e26371e2f2e49b099988d.json  query-2518930fc32d74a551fe27032dcb660edd06195f9f84ff6b787b70b4f7a40a70.json  query-30faafb5bf1ff13df486dc6d9d72ede87dcdf82ec49e77ae20a9d8c3f849fe05.json  query-403e396c6f7cfba7a9fef43a559a51b9417b642cc0208c6a772ace9496a4959c.json  query-41baf3cc4ff52d96fc326869965eb816304a4f96a4ea65f04842fff0acd09b34.json  query-5b7cb79c088dd8373b4ce963ad8d5bd405cf5910ab721ee74db0a0a908ad3d18.json  query-60171a96efd2a15631c4a04d86e9b07c63942dad1ee562182a1b418ee9d96027.json  query-6a78f6ed79497fa561304c4447299ea604a1cdbe33342ea3e2e60d91ca9e85a4.json  query-6c5b99de05b0be6cff9f6a7864e8c1d89902295ccfe6f57a13a1e88a3c81a296.json  query-725dd1f6edbeb0bc7c164398cd17e0a2974c41f94ed3e3cd6194d3f1cef6bb2f.json  query-77cfc1571d94de78779273858331db8f7969e5602d42b300659d2fe58d41ff5c.json  query-87bc01cb00ca032229c1b6f30c4c142ab2fc37de0c3da8ef9262624d7cbfc282.json  query-a1b33ce498e07da68a4c83b911dff45a518cdb4e5b69fed28989d06632d4ad8e.json  query-a93d167f58286aed4500dfc1868dd37abf96ec6a36be1bdc9996f948f6796260.json  query-faf7e6556241413d83430a56fe23f224ff5a866d39b82f3e6c451387edd9f5aa.json
migrations/: 20231127180325_init_db.sql  20231128103704_init_database.down.sql  20231128103704_init_database.up.sql  20231128103816_add_dummy_user.up.sql  20231128105339_add_timestamp.down.sql  20231128105339_add_timestamp.up.sql  20240220074620_add_verification_code_table.down.sql  20240220074620_add_verification_code_table.up.sql  20240221200239_add_company_table.down.sql  20240221200239_add_company_table.up.sql  20240223200827_update_company_table_to_all_be_not_null.down.sql  20240223200827_update_company_table_to_all_be_not_null.up.sql  20240223205959_update_company_table_to_make_company_name_uniqe.down.sql  20240223205959_update_company_table_to_make_company_name_uniqe.up.sql  20240223221724_add_dummy_compaines.up.sql  20240324183023_create_job_posting_table.down.sql  20240324183023_create_job_posting_table.up.sql  20240324192913_add_dummy_job_posting.up.sql
src/: main.rs
(+78 files in other folders)
