[package]
name = "job_spot_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"

dotenv = "0.15.0"

#Postgres access library
sqlx = {version = "0.7.3", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}

# Data serialization library
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Other utils
chrono = { version = "0.4.22", features = ["serde"] }

# for jwt middleware
futures = "0.3.29"
futures-util = "0.3.29"
jwt-simple = "0.11.9"

# Openssl for build (if openssl is not already installed on the dev server)
openssl = { version = "0.10.60", features = ["vendored"] }

# Validator
validator = { version = "0.16", features = ["derive"] }

# Password Hasher
argon2 = "0.5.2"

# Logging 
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "std",
    "env-filter",
    "registry",
    'json',
    'tracing-log',
] }
